--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ clap = "2.33.3"
 reqwest = { version = "0.11", features = ["json"] }
 scraper = "0.12.0"
 tokio = { version = "1", features = ["full"] }
+url = "2.2.2"
+futures = "0.3"
