--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,12 @@ scraper = "0.12.0"
 tokio = { version = "1", features = ["full"] }
 url = "2.2.2"
 futures = "0.3"
+serde_json = "1.0"
+csv = "1.1"
+
+[dev-dependencies]
+wiremock = "0.5"
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+csv = "1.1"
+serde_json = "1.0"
